--- a/src/login.html
+++ b/src/login.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Logga in</title>
     <link rel="stylesheet" href="css/style.css">
-    <script src="js/main.js" type="module"></script>
+    <script src="js/login.js" type="module"></script>
 </head>
 <body>
     <nav>
@@ -19,10 +19,10 @@
 
         <form>
             <label for="usernameLogin">Användarnamn:</label><br>
-            <input type="text" id="username"><br>
+            <input type="text" id="usernameLogin"><br>
 
             <label for="passwordLogin">Lösenord:</label><br>
-            <input type="text" id="password"><br>
+            <input type="text" id="passwordLogin"><br>
 
             <button id="loginBtn">Logga in</button>
         </form>
