står vem som är inloggad på hemliga sidan om man är autentiserad

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
     <nav>
         <ul id="navList">
             <li><a href="login.html">Logga in</a></li>
+            <a href="minsida.html">minsida</a>
         </ul>
     </nav>
 
