--- a/src/minsida.html
+++ b/src/minsida.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Min sida</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="js/secrets.js" type="module"></script>
 </head>
 <body>
     <nav>
@@ -16,9 +17,9 @@
     <main>
         <h1>Välkommen tillbaka</h1>
 
-        <article>
-            hemligheter! 
-        </article>
+        <div id="secretMessage"> 
+            <p>hemligt!</p>
+        </div>
     </main>
 </body>
 </html>
